@@ -75,6 +75,7 @@ This plugin is free but if you install and find it useful then a donation to sup
 ## Version history ##
 
     version     Description
+    2015-04-04  Internal changes to improve memory usage
     2015-03-23  Change to autoload approach
     2015-03-04  Add subscriber id and uniqid as subscriber data fields
     2015-02-13  Add "is between" operator for date fields
